Fix bug when opening keyboard on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -242,7 +242,7 @@ a {
 	}
 }
 
-@media (orientation: portrait) {
+@media (max-width: 800px) {
 	body {
 		flex-direction: column;
 		height: max-content;
